src/objects/Sales_Pipeline_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>BDR_Originator__c</fullName>
        <formula>IF(CONTAINS(Snap_Lead_Originator__c,&quot;BDR&quot;),TRUE,FALSE)</formula>
        <label>BDR Originator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Pipe__c</fullName>
        <label>Cloud Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cons_Act_L90__c</fullName>
        <formula>IF(
   Snap_Close_Date__c &gt; (DATEVALUE(CreatedDate) - 90),
   Snap_Cons_Act__c,
   0
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cons Act (L90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Created Date (2)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_Monthly__c</fullName>
        <formula>IF(DAY(DATEVALUE(CreatedDate)) = 1, TRUE, FALSE)</formula>
        <label>Created Monthly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edu_Act_L90__c</fullName>
        <formula>IF(
   Snap_Close_Date__c &gt; (DATEVALUE(CreatedDate) - 90),
   Snap_Edu_Act__c,
   0
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edu Act (L90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edu_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edu Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GA_Eng_Type__c</fullName>
        <label>GA Eng. Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Expert_Consulting__c</fullName>
        <label>Gross Expert Consulting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_Other_Consulting__c</fullName>
        <label>Gross Other Consulting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Originator_Mgr__c</fullName>
        <label>Lead Originator Mgr</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mgr_Lvl_1__c</fullName>
        <formula>Owner:User.Manager.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mgr Lvl 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_License_F__c</fullName>
        <formula>Snap_Net_License_Fcst__c * (1/Snap_Probability__c)</formula>
        <label>Net License (F)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_License__c</fullName>
        <label>Net License</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSD_Is_My_Team__c</fullName>
        <formula>OR(
   $User.Id = Primary_Service_Director_LU__r.Id,
   $User.Id = Primary_Service_Director_LU__r.Manager.Id,
   $User.Id = Primary_Service_Director_LU__r.Manager.Manager.Id,
   $User.Id = Primary_Service_Director_LU__r.Manager.Manager.Manager.Id,
   $User.Id = Primary_Service_Director_LU__r.Manager.Manager.Manager.Manager.Id,
   $User.Id = Primary_Service_Director_LU__r.Manager.Manager.Manager.Manager.Manager.Id,
   $User.Id = Primary_Service_Director_LU__r.Manager.Manager.Manager.Manager.Manager.Manager.Id,
   $User.Id = Primary_Service_Director_LU__r.Manager.Manager.Manager.Manager.Manager.Manager.Manager.Id
  )</formula>
        <label>PSD Is My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Service_Director_LU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Services Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Pipeline_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposals__c</fullName>
        <label># Proposals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Account_Health__c</fullName>
        <label>Account Health</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Account__c</fullName>
        <label>Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Act__c</fullName>
        <label>Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Analytics_Act__c</fullName>
        <label>Analytics Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Analytics_Fcst__c</fullName>
        <label>Analytics Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Analytics_Pipe__c</fullName>
        <label>Analytics Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Assessments__c</fullName>
        <label># Assessments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_BDRUser__c</fullName>
        <label>Business Development Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snap_Compass_Id__c</fullName>
        <label>Compass Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Config_Quality__c</fullName>
        <label>Config Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Snap_Cons_Act__c</fullName>
        <label>Exp Cons Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Cons_Fcst__c</fullName>
        <label>Exp Cons Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Cons_Pipe__c</fullName>
        <label>Exp Cons Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Customer_Status_Opportunity__c</fullName>
        <label>Customer Status (Opportunity)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Customer_Status__c</fullName>
        <label>Customer Status (Account)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_District__c</fullName>
        <label>District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Edu_Act__c</fullName>
        <label>Edu Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Edu_Fcst__c</fullName>
        <label>Edu Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Edu_Pipe__c</fullName>
        <label>Edu Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Executive_Sponsor__c</fullName>
        <label>Executive Sponsor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Fcst__c</fullName>
        <label>Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Forecast_Category__c</fullName>
        <label>Forecast Category</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_GA_Representative__c</fullName>
        <label>Partner Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Gross_Cloud__c</fullName>
        <label>Gross Cloud</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Host_Act__c</fullName>
        <label>Host Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Host_Fcst__c</fullName>
        <label>Host Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Host_Pipe__c</fullName>
        <label>Host Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Lead_Originator_Account__c</fullName>
        <label>Lead Originator Account</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Lead_Originator__c</fullName>
        <label>Originator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_License_Forecast__c</fullName>
        <label>License Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Snap_License_K__c</fullName>
        <label>License $K</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Manager_Lvl_1__c</fullName>
        <label>Manager (Lvl 1)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Marketing_Sourced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Sourced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snap_Mob_Act__c</fullName>
        <label>Mob Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Mob_Fcst__c</fullName>
        <label>Mob Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Mob_Pipe__c</fullName>
        <label>Mob Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Mx_Act__c</fullName>
        <label>Mx Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Mx_Fcst__c</fullName>
        <label>Mx Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Mx_Pipe__c</fullName>
        <label>Mx Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Net_License_Fcst__c</fullName>
        <label>Net License Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_No_Products__c</fullName>
        <label># Opp Line Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_OA__c</fullName>
        <label>% OA/UC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Snap_Opp_Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Pipeline Snapshot</relationshipLabel>
        <relationshipName>Sales_Pipeline_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snap_Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snap_Owner_Employee_Number__c</fullName>
        <label>Owner Employee Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Owner_Role__c</fullName>
        <label>Owner Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Partner_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Pipeline Snapshot</relationshipLabel>
        <relationshipName>Sales_Pipeline_Snapshot</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Snap_Partner__c</fullName>
        <label>Partner</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Percent_Config__c</fullName>
        <formula>IF( 
Snap_No_Products__c &gt; 0, 
1, 
0 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Config</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Snap_Pipe__c</fullName>
        <label>Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Primary_SE__c</fullName>
        <label>Sales Engineer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Primary_Services_Director__c</fullName>
        <label>Services Director</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Snap_Quality__c</fullName>
        <label>Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Snap_Quarter_View__c</fullName>
        <formula>IF( 
(TEXT(YEAR(Snap_Close_Date__c)) &amp; &quot;Q&quot; &amp; TEXT(FLOOR(((MONTH(Snap_Close_Date__c)-1)/3)+1))) = (TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot;Q&quot; &amp; TEXT(FLOOR(((MONTH(DATEVALUE(CreatedDate))-1)/3)+1))),
TRUE,
FALSE)</formula>
        <label>Quarter View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snap_Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_SE_Manager_Lvl_1__c</fullName>
        <label>SE Manager (Lvl 1)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Sec_Act__c</fullName>
        <label>Sec Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Sec_Fcst__c</fullName>
        <label>Sec Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Sec_Pipe__c</fullName>
        <label>Sec Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snap_Subs_Act__c</fullName>
        <label>Subs Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Subs_Fcst__c</fullName>
        <label>Subs Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Subs_Pipe__c</fullName>
        <label>Subs Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Supp_Act__c</fullName>
        <label>Supp Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Supp_Fcst__c</fullName>
        <label>Supp Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Supp_Pipe__c</fullName>
        <label>Supp Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Snap_Territory_JDE__c</fullName>
        <label>Territory (JDE)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <formula>IF( 
MONTH(DATEVALUE(CreatedDate))&lt;10, 
&quot;0&quot;+(TEXT(MONTH(DATEVALUE(CreatedDate)))), 
(TEXT(MONTH(DATEVALUE(CreatedDate))))) 
+ &quot;/&quot; + 
IF( 
DAY(DATEVALUE(CreatedDate))&lt;10, 
&quot;0&quot;+(TEXT(DAY(DATEVALUE(CreatedDate)))), 
(TEXT(DAY(DATEVALUE(CreatedDate)))))</formula>
        <label>Snapshot Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Duration__c</fullName>
        <label>Stage Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supp_Act_L90__c</fullName>
        <formula>IF(
   Snap_Close_Date__c &gt; (DATEVALUE(CreatedDate) - 90),
   Snap_Supp_Act__c,
   0
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supp Act (L90)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Snapshot_Support_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>T_Cons_Act__c</fullName>
        <label>Tot Cons Act</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Cons_Fcst__c</fullName>
        <label>Tot Cons Fcst</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_Cons_Pipe__c</fullName>
        <label>Tot Cons Pipe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Sales Pipeline Snapshot</label>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Pipeline Snapshot</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>